rules.v4
# Generated by iptables-save v1.4.21 on Sun May 13 16:38:01 2018
*nat
:PREROUTING ACCEPT [109:44323]
:INPUT ACCEPT [109:44323]
:OUTPUT ACCEPT [800:64822]
:POSTROUTING ACCEPT [798:64702]
-A POSTROUTING -m mark --mark 0x1 -j MASQUERADE
COMMIT
# Completed on Sun May 13 16:38:01 2018
# Generated by iptables-save v1.4.21 on Sun May 13 16:38:01 2018
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:10]
:LOGGING - DROP [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i tun0 -j ACCEPT
-A INPUT -m mark --mark 0x1 -j ACCEPT
-A INPUT -s 192.168.0.0/24 -j ACCEPT
-A INPUT -j LOGGING
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 209.222.18.222/32 -j ACCEPT
-A OUTPUT -d 209.222.18.218/32 -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -p udp -m udp --dport 1198 -j ACCEPT
-A OUTPUT -o tun0 -j ACCEPT
-A OUTPUT -m mark --mark 0x1 -j ACCEPT
-A OUTPUT -d 192.168.0.0/24 -j ACCEPT
-A OUTPUT -j LOGGING
#-A OUTPUT -j REJECT --reject-with icmp-net-unreachable
-A LOGGING -m limit --limit 2/sec -j LOG --log-prefix "IPTables-Dropped: " --log-level 4
-A LOGGING -j DROP
COMMIT
# Completed on Sun May 13 16:38:01 2018
# Generated by iptables-save v1.4.21 on Sun May 13 16:38:01 2018
*mangle
:PREROUTING ACCEPT [222964:31505481]
:INPUT ACCEPT [221638:31286691]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [300912:287214921]
:POSTROUTING ACCEPT [303470:287515114]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A PREROUTING -p tcp -m tcp --dport 22 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -p tcp -m tcp --dport 32400 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A OUTPUT -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A OUTPUT -p tcp -m tcp --dport 22 -j MARK --set-xmark 0x1/0xffffffff
-A OUTPUT -p tcp -m tcp --dport 32400 -j MARK --set-xmark 0x1/0xffffffff
-A OUTPUT -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
COMMIT
# Completed on Sun May 13 16:38:01 2018
